--- a/PubSubClient/bin/AndroidManifest.xml
+++ b/PubSubClient/bin/AndroidManifest.xml
@@ -22,11 +22,20 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
+				<category android:name="android.intent.category.DEFAULT"/>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         
+        <activity
+            android:name="com.middleware.pubsubclient.PublishQuery"
+            android:label="@string/publish" 
+            android:icon="@drawable/publish">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
