--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry exported="true" kind="lib" path="C:/Users/garvitab/Desktop/asmack-android-19-0.8.10.jar"/>
 	<classpathentry kind="lib" path="libs/android-support-v7-gridlayout.jar"/>
+	<classpathentry kind="lib" path="libs/smackx-debug-3.2.1.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
