Added code delete account
Creates account on the XMPP server and sends a message to the server JID
containing the list of sensors supported
In order to delete an account, sends a message to the server JID and
then deletes the account from the XMPP server

--- a/PubSubClient/AndroidManifest.xml
+++ b/PubSubClient/AndroidManifest.xml
@@ -44,6 +44,12 @@
            
        </activity>
        
+       <activity
+           android:name="com.middleware.pubsubclient.Settings"
+           android:label="Account Settings">
+           
+       </activity>
+       
     </application>
 
 </manifest>
