--- a/PubSubClient/.classpath
+++ b/PubSubClient/.classpath
@@ -5,10 +5,9 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="/Users/arjunahuja/Middleware-dev/PubSubClient/libs/android-support-v4.jar"/>
-	<classpathentry kind="lib" path="/Users/arjunahuja/Middleware-dev/PubSubClient/libs/android-support-v7-gridlayout.jar"/>
-	<classpathentry kind="lib" path="/Users/arjunahuja/Middleware-dev/PubSubClient/libs/asmack-android-19-0.8.10.jar"/>
-	<classpathentry kind="lib" path="/Users/arjunahuja/Middleware-dev/PubSubClient/libs/smackx-debug-3.2.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/android-support-v4.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/android-support-v7-gridlayout.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/asmack-android-19-0.8.10.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/smackx-debug-3.2.1.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
