--- a/PubSubClient/AndroidManifest.xml
+++ b/PubSubClient/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="19" />
 
+    <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
@@ -50,6 +51,7 @@
            
        </activity>
        
+       <activity android:name="com.google.android.gms" />
     </application>
 
 </manifest>
