--- a/PubSubClient/AndroidManifest.xml
+++ b/PubSubClient/AndroidManifest.xml
@@ -11,47 +11,48 @@
     <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:allowBackup="true"
+        android:debuggable="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"         
-        android:debuggable="true">
-        
+        android:theme="@style/AppTheme" >
         <activity
             android:name="com.middleware.pubsubclient.RegisterMe"
             android:label="@string/app_name" >
-           <intent-filter>
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-				<category android:name="android.intent.category.DEFAULT"/>
+
+                <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity> 
-        
-       <activity
+        </activity>
+        <activity
             android:name="com.middleware.pubsubclient.PublishQuery"
-            android:label="@string/publish" 
-            android:icon="@drawable/publish">          
-         
-        </activity> 
-        
-       <activity
-           android:name="com.middleware.pubsubclient.SubscribeTopics"
-           android:label="Subscription Settings">
-           
-       </activity>
-       
-       <activity
-           android:name="com.middleware.pubsubclient.Settings"
-           android:label="Account Settings">
-           
-       </activity>
-       
-       <activity android:name="com.google.android.gms" />
+            android:icon="@drawable/publish"
+            android:label="@string/publish" >
+        </activity>
+        <activity
+            android:name="com.middleware.pubsubclient.SubscribeTopics"
+            android:label="Subscription Settings" >
+        </activity>
+        <activity
+            android:name="com.middleware.pubsubclient.Settings"
+            android:label="Account Settings" >
+        </activity>
+        <activity android:name="com.google.android.gms" />
+        <service
+            android:name = ".AccReadings">
+        </service>
+        <service android:name="com.middleware.pubsubclient.ActivityRecognitionCallingService"></service>
+        <service android:name="com.middleware.pubsubclient.ActivityRecognitionService"></service>
     </application>
 
 </manifest>
