--- a/PubSubClient/bin/AndroidManifest.xml
+++ b/PubSubClient/bin/AndroidManifest.xml
@@ -20,10 +20,13 @@
 
     <application
         android:allowBackup="true"
-        android:debuggable="true"
+     
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+         <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version"/>
         <activity
             android:name="com.middleware.pubsubclient.RegisterMe"
             android:label="@string/app_name" >
