--- a/PubSubClient/AndroidManifest.xml
+++ b/PubSubClient/AndroidManifest.xml
@@ -24,9 +24,9 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-         <meta-data
+        <!--   <meta-data
             android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version"/>
+            android:value="@integer/google_play_services_version"/> -->
         <activity
             android:name="com.middleware.pubsubclient.RegisterMe"
             android:label="@string/app_name" >
