--- a/PubSubClient/.classpath
+++ b/PubSubClient/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry exported="true" kind="lib" path="libs/android-support-v7-gridlayout.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/asmack-android-19-0.8.10.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/smackx-debug-3.2.1.jar"/>
+	<classpathentry kind="lib" path="libs/opencsv-2.4.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
