--- a/PubSubClient/project.properties
+++ b/PubSubClient/project.properties
@@ -11,6 +11,5 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=Google Inc.:Google APIs x86:19
+target=android-16
 android.library.reference.1=..\\..\\..\\..\\android-sdks\\extras\\google\\google_play_services\\libproject\\google-play-services_lib
-android.library.reference.2=../../../../workspace/google-play-services_lib
