--- a/PubSubClient/bin/AndroidManifest.xml
+++ b/PubSubClient/bin/AndroidManifest.xml
@@ -6,8 +6,9 @@
 
     <uses-sdk
         android:minSdkVersion="8"
-        android:targetSdkVersion="19" />
-
+        android:targetSdkVersion="18" />
+	
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
     <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -26,9 +27,10 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <!--   <meta-data
+         <!--  <meta-data
             android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version"/> -->
+            android:value="@integer/google_play_services_version"/>  -->
+          
         <activity
             android:name="com.middleware.pubsubclient.RegisterMe"
             android:label="@string/app_name" >
@@ -57,6 +59,8 @@
             android:name = ".AccReadings">
         </service>
         
+        <service android:name="com.middleware.pubsubclient.GPSReadings"></service>
+        <service android:name="com.middleware.pubsubclient.MicReadings"></service>
         <service android:name = "com.middleware.pubsubclient.RequestListener"></service>
         <service android:name="com.middleware.pubsubclient.RequestListener"></service>
         <service android:name="com.middleware.pubsubclient.ActivityRecognitionCallingService"></service>
